Support source videos up to three hours
